# so-vits-svc-ws

./: .gitignore  README.md  pyproject.toml
so_vits_svc_ws/: default_gui_presets.json  main.py  main.pyw  patch.py
